deployment/k8s/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dev-frontend-braynsviewer-service
  namespace: bbp-ou-visualization
spec:
  selector:
    app: dev-frontend-braynsviewer-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
